--- a/config/config.json
+++ b/config/config.json
@@ -1,6 +1,5 @@
 [
     {"module": "dirlister"},
     {"module": "environment"},
-    {"module": "screenshotter"},
-    {"module": "keylogger"}
+    {"module": "screenshotter"}
 ]
