update config file

--- a/config/config.json
+++ b/config/config.json
@@ -2,5 +2,6 @@
     {"module": "dirlister"},
     {"module": "environment"},
     {"module": "screenshotter"},
-    {"module": "processes"}
+    {"module": "processes"},
+    {"module": "network_scanner"}
 ]
